# annotation-checker

./: .annotqa_cache.sqlite  README.md  prd.md  pyproject.toml
annotqa/: __init__.py  cli.py  demo.py  io.py  llm.py  models.py  rubric.py  scoring.py  selectors.py  summarize.py
annotqa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: sample.jsonl
examples/demo/: demo.jsonl
examples/demo_bad/: README.md  demo.jsonl  final_out.json  out.jsonl  report.json  summary.csv
examples/demo_good/: demo.jsonl  final_out.json  out.jsonl  report.json  rubric_v1_abtie.yaml  summary.csv
rubrics/: rubric_v1_abtie.yaml
tests/: test_demo.py  test_llm_schema.py  test_scoring.py  test_selectors.py  test_summarize.py  test_validation.py
